# attention-residuals-nano

./: .gitignore  README.md  analyze.py  debug_forward.py  debug_mem.py  debug_model.py  pyproject.toml  test_attn_debug.py  train_gpu.py  train_mac.py
attn_res/: __init__.py  baseline.csv  config.py  data.py  model.py  trainer.py
